# intoxicacao-exog

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
dashboard/: app.js  build_github_pages.py  dashboard_embedded.html  export_html.py  index.html  run_local.py  styles.css
dashboard/data/: dashboard_data.json
data/raw/: Dados CFF - Intoxicação exógena .xlsx
notebooks/: analise_inicial_intoxicacao_idosos.ipynb  dashboard_plotly_intoxicacao_idosos.ipynb  test.ipynb
notebooks/outputs/: insights_iniciais_intoxicacao.md
utils/: __init__.py  intoxicacao_analysis.py
