[tool.poetry]
name = "tox-older"
version = "0.1.0"
description = ""
authors = ["Manuel Ferreira Junior <ferreira.jr.ufpb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
matplotlib = "^3.11.0"
seaborn = "^0.13.2"
pandas = "^3.0.3"
plotly = "^6.8.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
